<resources>
    <string name="app_name">Proyecto Final PNT</string>
    <string name="new_user">new_user</string>
    <string name="login">login</string>
    <string name="crear_nuevo_usuario">Crear nuevo usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="check">check</string>
    <string name="denied">denied</string>
    <string name="nombres">Nombres</string>
    <string name="carrera_dependencia">Carrera/Dependencia</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="estudiante">Estudiante</string>
    <string name="bibliotecario">Bibliotecario</string>
    <string name="cancel">cancel</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="resumen">Resumen</string>
    <string name="unidades_disponibles">Unidades disponibles</string>
    <string name="issn">ISSN</string>
    <string name="palabras_clave">Palabras clave</string>
    <string name="registrarse_como_estudiante">Registrarse como estudiante</string>
    <string name="registrarse_como_bibliotecario">Registrarse como bibliotecario</string>
    <string name="addestudiante">addEstudiante</string>
    <string name="addbibliotecario">addBibliotecario</string>
    <string name="registrar_libro">Registrar Libro</string>
    <string name="consultar_libros">Consultar Libros</string>
    <string name="actualizar_libro">Actualizar libro</string>
    <string name="eliminar_libro">Eliminar libro</string>
    <string name="registrar">Registrar</string>
    <string name="listar_datos">Listar Datos</string>
    <string name="actualizar_datos_estudiante">Actualizar Datos Estudiante</string>
    <string name="registrar_prestamo">Registrar Prestamo</string>
    <string name="renovar_prestamo">Renovar Prestamo</string>
    <string name="carrera">Carrera</string>
    <string name="fecha_de_prestamo">Fecha de prestamo</string>
</resources>
